api: refactor model
