# api/model/todo.go
@@ -5,10 +5,10 @@ type Todo struct {
 	Title       string `json:"title"`
 	Description string `json:"description"`
 	CreatedDate string `json"createdDate"`
-	User        User   `json:"user"`
+	UserID      string `json:"userId"`
 }
 
-type User struct {
-	ID   string `json:"id"`
-	Name string `json:"name"`
+type TodoRequest struct {
+	Title       string `json:"title"`
+	Description string `json:"description"`
 }
