# docs/swagger.json
@@ -10,8 +10,8 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "endpoint to create todo item",
-                "operationId": "create-todo",
+                "summary": "endpoint to get todo item",
+                "operationId": "get-todo",
                 "parameters": [
                     {
                         "type": "string",
@@ -51,7 +51,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Todo"
+                            "$ref": "#/definitions/model.TodoRequest"
                         }
                     }
                 ],
@@ -70,6 +70,9 @@
         "model.Todo": {
             "type": "object",
             "properties": {
+                "createdDate": {
+                    "type": "string"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -79,18 +82,18 @@
                 "title": {
                     "type": "string"
                 },
-                "user": {
-                    "$ref": "#/definitions/model.User"
+                "userId": {
+                    "type": "string"
                 }
             }
         },
-        "model.User": {
+        "model.TodoRequest": {
             "type": "object",
             "properties": {
-                "id": {
+                "description": {
                     "type": "string"
                 },
-                "name": {
+                "title": {
                     "type": "string"
                 }
             }
